Provide correct location information for redefined functions
* Raise errors for indexing CPtr

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -955,6 +955,14 @@ asr = true
 filename = "errors/bindc_02.py"
 asr = true
 
+[[test]]
+filename = "errors/cptr_01.py"
+asr = true
+
+[[test]]
+filename = "errors/func_01.py"
+asr = true
+
 # tests/runtime_errors
 [[test]]
 filename = "runtime_errors/test_list_01.py"
