--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -186,7 +186,7 @@ RUN(NAME array_expr_01            LABELS cpython llvm)
 RUN(NAME array_expr_02            LABELS cpython llvm)
 RUN(NAME bindc_01            LABELS llvm c)
 RUN(NAME bindc_02            LABELS llvm c)
-RUN(NAME bindc_04            LABELS llvm)
+RUN(NAME bindc_04            LABELS llvm c)
 RUN(NAME exit_01             LABELS cpython llvm c)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
 RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86)
@@ -195,7 +195,7 @@ RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
 
 # Test all four backends
 RUN(NAME print_01            LABELS cpython llvm c wasm) # wasm not yet supports sep and end keywords
-RUN(NAME print_03            LABELS x86 wasm_x86) # simple test case specifically for x86 and wasm_x86
+RUN(NAME print_03            LABELS x86 c wasm_x86) # simple test case specifically for x86 and wasm_x86
 
 # CPython and LLVM
 RUN(NAME const_01            LABELS cpython llvm c)
@@ -219,9 +219,9 @@ RUN(NAME expr_13             LABELS llvm c
         EXTRAFILES expr_13b.c)
 RUN(NAME expr_14             LABELS cpython llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
-RUN(NAME loop_02             LABELS cpython llvm wasm wasm_x86)
-RUN(NAME if_01               LABELS cpython llvm wasm wasm_x86)
-RUN(NAME if_02               LABELS cpython llvm wasm wasm_x86)
+RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86)
+RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86)
+RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86)
 RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
@@ -245,9 +245,9 @@ RUN(NAME test_dict_03        LABELS cpython llvm)
 RUN(NAME test_dict_04        LABELS cpython llvm)
 RUN(NAME test_dict_05        LABELS cpython llvm)
 RUN(NAME test_for_loop       LABELS cpython llvm c)
-RUN(NAME modules_01          LABELS cpython llvm wasm wasm_x86)
+RUN(NAME modules_01          LABELS cpython llvm c wasm wasm_x86)
 RUN(NAME modules_02          LABELS cpython llvm wasm wasm_x86)
-RUN(NAME test_import_01      LABELS cpython llvm)
+RUN(NAME test_import_01      LABELS cpython llvm c)
 RUN(NAME test_import_02      LABELS cpython llvm)
 RUN(NAME test_import_03      LABELS cpython llvm)
 RUN(NAME test_import_04      IMPORT_PATH ..
@@ -268,13 +268,13 @@ RUN(NAME elemental_08        LABELS cpython llvm)
 RUN(NAME elemental_09        LABELS cpython llvm)
 RUN(NAME elemental_10        LABELS cpython llvm)
 RUN(NAME elemental_11        LABELS cpython llvm)
-RUN(NAME elemental_12        LABELS cpython llvm)
+RUN(NAME elemental_12        LABELS cpython llvm c)
 RUN(NAME test_random         LABELS cpython llvm)
-RUN(NAME test_os             LABELS cpython llvm)
+RUN(NAME test_os             LABELS cpython llvm c)
 RUN(NAME test_builtin        LABELS cpython llvm c)
 RUN(NAME test_builtin_abs    LABELS cpython llvm c)
 RUN(NAME test_builtin_bool   LABELS cpython llvm c)
-RUN(NAME test_builtin_pow    LABELS cpython llvm)
+RUN(NAME test_builtin_pow    LABELS cpython llvm c)
 RUN(NAME test_builtin_int    LABELS cpython llvm c)
 RUN(NAME test_builtin_len    LABELS cpython llvm c)
 RUN(NAME test_builtin_str    LABELS cpython llvm c)
@@ -296,13 +296,13 @@ RUN(NAME test_c_interop_04   LABELS cpython llvm c
         EXTRAFILES test_c_interop_04b.c)
 RUN(NAME test_c_interop_05   LABELS llvm c
         EXTRAFILES test_c_interop_05b.c)
-RUN(NAME bindc_03   LABELS llvm
+RUN(NAME bindc_03   LABELS llvm c
         EXTRAFILES bindc_03b.c)
 RUN(NAME bindc_05   LABELS llvm c
         EXTRAFILES bindc_05b.c)
 RUN(NAME bindc_06   LABELS llvm c
         EXTRAFILES bindc_06b.c)
-RUN(NAME test_generics_01    LABELS cpython llvm)
+RUN(NAME test_generics_01    LABELS cpython llvm c)
 RUN(NAME test_cmath          LABELS cpython llvm c)
 RUN(NAME test_complex        LABELS cpython llvm c)
 RUN(NAME test_max_min        LABELS cpython llvm c)
@@ -341,10 +341,10 @@ RUN(NAME union_01            LABELS cpython llvm c)
 RUN(NAME union_02            LABELS llvm c)
 RUN(NAME union_03            LABELS cpython llvm c)
 RUN(NAME test_str_to_int     LABELS cpython llvm c)
-RUN(NAME test_platform       LABELS cpython llvm)
+RUN(NAME test_platform       LABELS cpython llvm c)
 RUN(NAME test_vars_01        LABELS cpython llvm)
-RUN(NAME test_version        LABELS cpython llvm)
-RUN(NAME vec_01              LABELS cpython llvm)
+RUN(NAME test_version        LABELS cpython llvm c)
+RUN(NAME vec_01              LABELS cpython llvm c)
 RUN(NAME test_str_comparison LABELS cpython llvm c)
 RUN(NAME test_bit_length     LABELS cpython llvm c)
 RUN(NAME str_to_list_cast    LABELS cpython llvm c)
@@ -357,10 +357,10 @@ RUN(NAME generics_array_03   LABELS cpython llvm)
 RUN(NAME generics_list_01    LABELS cpython llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
 RUN(NAME test_str_attributes LABELS cpython llvm c)
-RUN(NAME kwargs_01           LABELS cpython llvm)
+RUN(NAME kwargs_01           LABELS cpython llvm c)
 RUN(NAME test_01_goto        LABELS cpython llvm c)
 
-RUN(NAME func_inline_01 LABELS llvm wasm)
+RUN(NAME func_inline_01 LABELS llvm c wasm)
 RUN(NAME func_inline_02 LABELS cpython llvm c)
 RUN(NAME func_static_01 LABELS cpython llvm c wasm)
 RUN(NAME func_static_02 LABELS cpython llvm c wasm)
