--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ integration_tests/array_02_decl
 integration_tests/array_02_decl.c
 integration_tests/expr_12
 integration_tests/expr_12.c
+integration_tests/expr_07_generated.c
