Updated and enabled CPython tests for c_p_pointer

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -184,8 +184,8 @@ RUN(NAME array_02_decl            LABELS cpython llvm c)
 RUN(NAME array_03_decl            LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm)
 RUN(NAME array_expr_02            LABELS cpython llvm)
-RUN(NAME bindc_01            LABELS llvm c)
-RUN(NAME bindc_02            LABELS llvm c)
+RUN(NAME bindc_01            LABELS cpython llvm c)
+RUN(NAME bindc_02            LABELS cpython llvm c)
 RUN(NAME bindc_04            LABELS llvm c)
 RUN(NAME exit_01             LABELS cpython llvm c)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
@@ -314,7 +314,7 @@ RUN(NAME test_unary_plus     LABELS cpython llvm c)
 RUN(NAME test_bool_binop     LABELS cpython llvm c)
 RUN(NAME test_issue_518      LABELS cpython llvm c)
 RUN(NAME structs_01          LABELS cpython llvm c)
-RUN(NAME structs_02          LABELS llvm c)
+RUN(NAME structs_02          LABELS cpython llvm c)
 RUN(NAME structs_03          LABELS llvm c)
 RUN(NAME structs_04          LABELS cpython llvm c)
 RUN(NAME structs_05          LABELS llvm c)
@@ -329,7 +329,7 @@ RUN(NAME structs_12          LABELS cpython llvm c)
 RUN(NAME structs_13          LABELS llvm c
     EXTRAFILES structs_13b.c)
 RUN(NAME structs_15          LABELS cpython llvm c)
-RUN(NAME sizeof_01          LABELS llvm c
+RUN(NAME sizeof_01           LABELS llvm c
         EXTRAFILES sizeof_01b.c)
 RUN(NAME enum_01             LABELS cpython llvm c)
 RUN(NAME enum_02             LABELS cpython llvm)
