Implement Compare Pass for TupleCompare

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -54,6 +54,7 @@ set(SRC
     pass/update_array_dim_intrinsic_calls.cpp
     pass/pass_array_by_data.cpp
     pass/pass_list_expr.cpp
+    pass/pass_compare.cpp
 
     asr_verify.cpp
     asr_utils.cpp
