--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -401,6 +401,10 @@ asr = true
 pass = "print_list"
 
 [[test]]
+filename = "../integration_tests/print_04.py"
+llvm = true
+
+[[test]]
 filename = "../integration_tests/generics_01.py"
 asr = true
 
