--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -283,8 +283,8 @@ RUN(NAME test_import_01      LABELS cpython llvm c)
 RUN(NAME test_import_02      LABELS cpython llvm c)
 RUN(NAME test_import_03      LABELS cpython llvm c)
 RUN(NAME test_import_04      IMPORT_PATH ..
-        LABELS cpython llvm c)
-RUN(NAME test_math           LABELS cpython llvm)
+        LABELS cpython llvm)
+RUN(NAME test_math           LABELS cpython llvm c)
 RUN(NAME test_numpy_01       LABELS cpython llvm c)
 RUN(NAME test_numpy_02       LABELS cpython llvm c)
 RUN(NAME test_numpy_03       LABELS cpython llvm c)
