Add run_with_dbg in run_tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -7,6 +7,7 @@
 # tokens ... output Tokens, compare against reference version
 # run ... compiles and executes the specified file;
 #         checks both runtime errors and successful runs
+# run_with_dbg ... runtime checks with debug information enabled
 
 # tests
 
@@ -989,16 +990,16 @@ run = true
 
 [[test]]
 filename = "runtime_errors/test_assert_01.py"
-run = true
+run_with_dbg = true
 
 [[test]]
 filename = "runtime_errors/test_assert_02.py"
-run = true
+run_with_dbg = true
 
 [[test]]
 filename = "runtime_errors/test_quit_01.py"
-run = true
+run_with_dbg = true
 
 [[test]]
 filename = "runtime_errors/test_raise_01.py"
-run = true
+run_with_dbg = true
