--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -207,8 +207,8 @@ RUN(NAME bindc_01            LABELS cpython llvm c)
 RUN(NAME bindc_02            LABELS cpython llvm c)
 RUN(NAME bindc_04            LABELS llvm c)
 RUN(NAME bindc_07            LABELS llvm c)
-RUN(NAME exit_01             LABELS cpython llvm c)
-RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
+RUN(NAME exit_01             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
+RUN(NAME exit_02     FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86)
 RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm wasm_x86)
 RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
