Added error tests for un-equal types in do loop

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -951,6 +951,14 @@ filename = "errors/enum_02.py"
 asr = true
 
 [[test]]
+filename = "errors/loop_01.py"
+asr = true
+
+[[test]]
+filename = "errors/loop_02.py"
+asr = true
+
+[[test]]
 filename = "errors/test_goto.py"
 asr = true
 
