TEST: WASM_X64: Enable supporting tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -218,8 +218,8 @@ RUN(NAME bindc_04            LABELS llvm c)
 RUN(NAME bindc_07            LABELS llvm c)
 RUN(NAME exit_01             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86)
-RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm wasm_x86)
+RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86 wasm_x64)
+RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
 
 # Test all four backends
@@ -249,9 +249,9 @@ RUN(NAME expr_13             LABELS llvm c
         EXTRAFILES expr_13b.c)
 RUN(NAME expr_14             LABELS cpython llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
-RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86)
+RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86)
+RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
@@ -276,8 +276,8 @@ RUN(NAME test_dict_03        LABELS cpython llvm)
 RUN(NAME test_dict_04        LABELS cpython llvm)
 RUN(NAME test_dict_05        LABELS cpython llvm)
 RUN(NAME test_for_loop       LABELS cpython llvm c)
-RUN(NAME modules_01          LABELS cpython llvm c wasm wasm_x86)
-RUN(NAME modules_02          LABELS cpython llvm wasm wasm_x86)
+RUN(NAME modules_01          LABELS cpython llvm c wasm wasm_x86 wasm_x64)
+RUN(NAME modules_02          LABELS cpython llvm wasm wasm_x86 wasm_x64)
 RUN(NAME test_import_01      LABELS cpython llvm c)
 RUN(NAME test_import_02      LABELS cpython llvm c)
 RUN(NAME test_import_03      LABELS cpython llvm c)
