--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -339,6 +339,7 @@ RUN(NAME test_cmath          LABELS cpython llvm c)
 RUN(NAME test_complex        LABELS cpython llvm c)
 RUN(NAME test_max_min        LABELS cpython llvm c)
 RUN(NAME test_global         LABELS cpython llvm)
+RUN(NAME test_global_decl    LABELS cpython llvm c)
 RUN(NAME test_integer_bitnot LABELS cpython llvm c)
 RUN(NAME test_ifexp          LABELS cpython llvm c)
 RUN(NAME test_unary_minus    LABELS cpython llvm c)
