Fix C tests: test_version is not a valid C test and was enables earlier in #1326

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -339,7 +339,7 @@ RUN(NAME test_generics_01    LABELS cpython llvm c)
 RUN(NAME test_cmath          LABELS cpython llvm c)
 RUN(NAME test_complex        LABELS cpython llvm c)
 RUN(NAME test_max_min        LABELS cpython llvm c)
-RUN(NAME test_global         LABELS cpython llvm)
+RUN(NAME test_global         LABELS cpython llvm c)
 RUN(NAME test_global_decl    LABELS cpython llvm c)
 RUN(NAME test_integer_bitnot LABELS cpython llvm c)
 RUN(NAME test_ifexp          LABELS cpython llvm c)
@@ -383,7 +383,7 @@ RUN(NAME union_03            LABELS cpython llvm c)
 RUN(NAME test_str_to_int     LABELS cpython llvm c)
 RUN(NAME test_platform       LABELS cpython llvm c)
 RUN(NAME test_vars_01        LABELS cpython llvm)
-RUN(NAME test_version        LABELS cpython llvm c)
+RUN(NAME test_version        LABELS cpython llvm)
 RUN(NAME vec_01              LABELS cpython llvm c)
 RUN(NAME test_str_comparison LABELS cpython llvm c)
 RUN(NAME test_bit_length     LABELS cpython llvm c)
