Enclose the runtime stacktrace handling within the HAVE_RUNTIME_STACKTRACE ifdef block

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,6 +243,15 @@ if (WITH_STACKTRACE)
     endif()
     set(HAVE_LFORTRAN_STACKTRACE yes)
 endif()
+if (WITH_RUNTIME_STACKTRACE)
+    set(WITH_UNWIND yes)
+    if (APPLE)
+        set(WITH_MACHO yes)
+    else()
+        set(WITH_LINKH yes)
+    endif()
+    set(HAVE_RUNTIME_STACKTRACE yes)
+endif()
 if (WITH_BFD)
     find_package(BFD REQUIRED)
     set(HAVE_LFORTRAN_BFD yes)
