Print `WITH_RUNTIME_STACKTRACE` status in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,6 +293,7 @@ message("WITH_LFORTRAN_ASSERT: ${WITH_LFORTRAN_ASSERT}")
 message("LPYTHON_STATIC_BIN: ${LPYTHON_STATIC_BIN}")
 message("LPYTHON_BUILD_TO_WASM: ${LPYTHON_BUILD_TO_WASM}")
 message("WITH_STACKTRACE: ${WITH_STACKTRACE}")
+message("WITH_RUNTIME_STACKTRACE: ${WITH_RUNTIME_STACKTRACE}")
 message("WITH_UNWIND: ${WITH_UNWIND}")
 message("WITH_BFD: ${WITH_BFD}")
 message("WITH_DWARFDUMP: ${WITH_DWARFDUMP}")
