--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -254,7 +254,7 @@ RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME loop_03             LABELS cpython llvm c wasm)
 RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME print_02            LABELS cpython llvm)
+RUN(NAME print_02            LABELS cpython llvm c)
 RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
 RUN(NAME test_str_02         LABELS cpython llvm c)
