TEST: Add and enable test for comparison

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -414,5 +414,6 @@ RUN(NAME func_dep_04    LABELS cpython llvm c)
 
 RUN(NAME float_01 LABELS cpython llvm wasm wasm_x64)
 RUN(NAME recursive_01 LABELS cpython llvm wasm wasm_x64 wasm_x86)
+RUN(NAME comp_01 LABELS cpython llvm wasm wasm_x64)
 
 RUN(NAME test_argv_01    LABELS llvm) # TODO: Test using CPython
