--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -373,6 +373,7 @@ RUN(NAME structs_19          LABELS cpython llvm c
     EXTRAFILES structs_19b.c)
 RUN(NAME structs_20          LABELS cpython llvm c
     EXTRAFILES structs_20b.c)
+RUN(NAME structs_21          LABELS llvm c)
 RUN(NAME sizeof_01           LABELS llvm c
         EXTRAFILES sizeof_01b.c)
 RUN(NAME enum_01             LABELS cpython llvm c)
