--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -280,7 +280,7 @@ RUN(NAME test_dict_04        LABELS cpython llvm)
 RUN(NAME test_dict_05        LABELS cpython llvm)
 RUN(NAME test_for_loop       LABELS cpython llvm c)
 RUN(NAME modules_01          LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME modules_02          LABELS cpython llvm wasm wasm_x86 wasm_x64)
+RUN(NAME modules_02          LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME test_import_01      LABELS cpython llvm c)
 RUN(NAME test_import_02      LABELS cpython llvm c)
 RUN(NAME test_import_03      LABELS cpython llvm c)
