--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -343,7 +343,7 @@ RUN(NAME test_complex        LABELS cpython llvm c)
 RUN(NAME test_max_min        LABELS cpython llvm c)
 RUN(NAME test_global         LABELS cpython llvm c)
 RUN(NAME test_global_decl    LABELS cpython llvm c)
-RUN(NAME test_integer_bitnot LABELS cpython llvm c)
+RUN(NAME test_integer_bitnot LABELS cpython llvm c wasm)
 RUN(NAME test_ifexp          LABELS cpython llvm c)
 RUN(NAME test_unary_minus    LABELS cpython llvm c)
 RUN(NAME test_unary_plus     LABELS cpython llvm c)
@@ -417,5 +417,7 @@ RUN(NAME func_dep_04    LABELS cpython llvm c)
 RUN(NAME float_01 LABELS cpython llvm wasm wasm_x64)
 RUN(NAME recursive_01 LABELS cpython llvm wasm wasm_x64 wasm_x86)
 RUN(NAME comp_01 LABELS cpython llvm wasm wasm_x64)
+RUN(NAME bit_operations_i32 LABELS cpython llvm wasm)
+RUN(NAME bit_operations_i64 LABELS cpython llvm wasm)
 
 RUN(NAME test_argv_01    LABELS llvm) # TODO: Test using CPython
