TEST: Enable suporting tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -235,10 +235,10 @@ RUN(NAME const_02            LABELS cpython llvm c)
 RUN(NAME const_03            LABELS cpython llvm c
         EXTRAFILES const_03b.c)
 RUN(NAME const_04            LABELS cpython llvm c)
-RUN(NAME expr_01             LABELS cpython llvm c wasm)
-RUN(NAME expr_02             LABELS cpython llvm c wasm)
-RUN(NAME expr_03             LABELS cpython llvm c wasm)
-RUN(NAME expr_04             LABELS cpython llvm c)
+RUN(NAME expr_01             LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME expr_02             LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME expr_03             LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME expr_04             LABELS cpython llvm c wasm)
 RUN(NAME expr_05             LABELS cpython llvm c)
 RUN(NAME expr_06             LABELS cpython llvm c)
 RUN(NAME expr_07             LABELS cpython llvm c)
@@ -252,7 +252,7 @@ RUN(NAME expr_13             LABELS llvm c
 RUN(NAME expr_14             LABELS cpython llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
-RUN(NAME loop_03             LABELS cpython llvm c wasm)
+RUN(NAME loop_03             LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME print_02            LABELS cpython llvm c)
@@ -417,7 +417,7 @@ RUN(NAME func_dep_04    LABELS cpython llvm c)
 RUN(NAME float_01 LABELS cpython llvm wasm wasm_x64)
 RUN(NAME recursive_01 LABELS cpython llvm wasm wasm_x64 wasm_x86)
 RUN(NAME comp_01 LABELS cpython llvm wasm wasm_x64)
-RUN(NAME bit_operations_i32 LABELS cpython llvm wasm)
+RUN(NAME bit_operations_i32 LABELS cpython llvm wasm wasm_x64)
 RUN(NAME bit_operations_i64 LABELS cpython llvm wasm)
 
 RUN(NAME test_argv_01    LABELS llvm) # TODO: Test using CPython
