--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -212,6 +212,8 @@ RUN(NAME variable_decl_01         LABELS cpython llvm c)
 RUN(NAME variable_decl_02         LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm)
 RUN(NAME array_expr_02            LABELS cpython llvm)
+RUN(NAME array_01            LABELS cpython llvm wasm)
+RUN(NAME array_02            LABELS cpython wasm)
 RUN(NAME bindc_01            LABELS cpython llvm c)
 RUN(NAME bindc_02            LABELS cpython llvm c)
 RUN(NAME bindc_04            LABELS llvm c)
@@ -226,6 +228,7 @@ RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
 RUN(NAME print_01            LABELS cpython llvm c wasm) # wasm not yet supports sep and end keywords
 RUN(NAME print_03            LABELS x86 c wasm wasm_x86 wasm_x64) # simple test case specifically for x86, wasm_x86 and wasm_x64
 RUN(NAME print_04            LABELS cpython llvm c)
+RUN(NAME print_05            LABELS cpython llvm wasm wasm_x64)
 RUN(NAME print_float         LABELS cpython llvm wasm wasm_x64)
 RUN(NAME print_list_tuple    LABELS cpython c) # TODO: llvm doesn't completely support printing list
 
