--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -217,7 +217,7 @@ RUN(NAME array_02            LABELS cpython wasm)
 RUN(NAME bindc_01            LABELS cpython llvm c)
 RUN(NAME bindc_02            LABELS cpython llvm c)
 RUN(NAME bindc_04            LABELS llvm c)
-RUN(NAME bindc_07            LABELS llvm c)
+RUN(NAME bindc_07            LABELS cpython llvm c)
 RUN(NAME exit_01             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME exit_01b            LABELS cpython llvm c wasm wasm_x86 wasm_x64)
