Add and update tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -757,6 +757,10 @@ filename = "errors/test_binop2.py"
 asr = true
 
 [[test]]
+filename = "errors/test_binop3.py"
+asr = true
+
+[[test]]
 filename = "errors/test_dict1.py"
 asr = true
 
