--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -992,6 +992,14 @@ filename = "runtime_errors/test_list_02.py"
 run = true
 
 [[test]]
+filename = "runtime_errors/test_str_01.py"
+run = true
+
+[[test]]
+filename = "runtime_errors/test_str_02.py"
+run = true
+
+[[test]]
 filename = "runtime_errors/test_assert_01.py"
 run_with_dbg = true
 
