Added tests to check for errors being thrown

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -897,6 +897,14 @@ filename = "errors/test_tuple1.py"
 asr = true
 
 [[test]]
+filename = "errors/test_tuple2.py"
+asr = true
+
+[[test]]
+filename = "errors/test_tuple3.py"
+asr = true
+
+[[test]]
 filename = "errors/test_for2.py"
 asr = true
 
