--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -279,6 +279,10 @@ filename = "c_interop1.py"
 asr = true
 c = true
 
+[[test]]
+filename = "test_end_sep_keywords.py"
+asr = true
+
 # integration_tests
 
 [[test]]
