--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -991,6 +991,10 @@ filename = "errors/bindc_02.py"
 asr = true
 
 [[test]]
+filename = "errors/bindc_03.py"
+asr = true
+
+[[test]]
 filename = "errors/cptr_01.py"
 asr = true
 
