Do not allow assigning to loop variables (#1543)
* Updated code to raise error message when there are any local assignments in a loop
* Added tests and updated reference files

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -979,6 +979,10 @@ filename = "errors/loop_02.py"
 asr = true
 
 [[test]]
+filename = "errors/loop_03.py"
+asr = true
+
+[[test]]
 filename = "errors/test_goto.py"
 asr = true
 
