[ASRPass] Wrap all the global symbols into a module, * Move all the symbols from the global scope into the `_global_symbols` module * After applying this pass, there will only be two symbols in TranslationUnit, .ie., `Module` (_global_symbols) and `Program` (main_program) * `main_program` calls the `_lpython_main_program` (which contains the global statements) function from the module.

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SRC
     pass/for_all.cpp
     pass/global_stmts.cpp
     pass/global_stmts_program.cpp
+    pass/global_symbols.cpp
     pass/select_case.cpp
     pass/implied_do_loops.cpp
     pass/array_op.cpp
