--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -279,7 +279,7 @@ RUN(NAME test_list_10        LABELS cpython llvm c)
 RUN(NAME test_list_section   LABELS cpython llvm c)
 RUN(NAME test_tuple_01       LABELS cpython llvm c)
 RUN(NAME test_tuple_02       LABELS cpython llvm c)
-RUN(NAME test_tuple_03       LABELS cpython llvm)
+RUN(NAME test_tuple_03       LABELS cpython llvm c)
 RUN(NAME test_dict_01        LABELS cpython llvm c)
 RUN(NAME test_dict_02        LABELS cpython llvm c)
 RUN(NAME test_dict_03        LABELS cpython llvm)
@@ -408,9 +408,9 @@ RUN(NAME str_to_list_cast    LABELS cpython llvm c)
 
 RUN(NAME generics_01         LABELS cpython llvm c)
 RUN(NAME generics_02         LABELS cpython llvm c)
-RUN(NAME generics_array_01   LABELS cpython llvm)
+RUN(NAME generics_array_01   LABELS cpython llvm c)
 RUN(NAME generics_array_02   LABELS cpython llvm)
-RUN(NAME generics_array_03   LABELS cpython llvm)
+RUN(NAME generics_array_03   LABELS cpython llvm c)
 RUN(NAME generics_list_01    LABELS cpython llvm c)
 RUN(NAME test_statistics     LABELS cpython llvm)
 RUN(NAME test_str_attributes LABELS cpython llvm c)
