--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -409,7 +409,7 @@ RUN(NAME str_to_list_cast    LABELS cpython llvm c)
 RUN(NAME generics_01         LABELS cpython llvm c)
 RUN(NAME generics_02         LABELS cpython llvm c)
 RUN(NAME generics_array_01   LABELS cpython llvm c)
-RUN(NAME generics_array_02   LABELS cpython llvm)
+RUN(NAME generics_array_02   LABELS cpython llvm c)
 RUN(NAME generics_array_03   LABELS cpython llvm c)
 RUN(NAME generics_list_01    LABELS cpython llvm c)
 RUN(NAME test_statistics     LABELS cpython llvm)
