--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -210,10 +210,10 @@ RUN(NAME array_02_decl            LABELS cpython llvm c)
 RUN(NAME array_03_decl            LABELS cpython llvm c)
 RUN(NAME variable_decl_01         LABELS cpython llvm c)
 RUN(NAME variable_decl_02         LABELS cpython llvm c)
-RUN(NAME array_expr_01            LABELS cpython llvm)
-RUN(NAME array_expr_02            LABELS cpython llvm)
-RUN(NAME array_01            LABELS cpython llvm wasm)
-RUN(NAME array_02            LABELS cpython wasm)
+RUN(NAME array_expr_01            LABELS cpython llvm c)
+RUN(NAME array_expr_02            LABELS cpython llvm c)
+RUN(NAME array_01            LABELS cpython llvm wasm c)
+RUN(NAME array_02            LABELS cpython wasm c)
 RUN(NAME bindc_01            LABELS cpython llvm c)
 RUN(NAME bindc_02            LABELS cpython llvm c)
 RUN(NAME bindc_04            LABELS llvm c)
@@ -229,8 +229,8 @@ RUN(NAME print_01            LABELS cpython llvm c wasm) # wasm not yet supports
 RUN(NAME print_03            LABELS x86 c wasm wasm_x86 wasm_x64) # simple test case specifically for x86, wasm_x86 and wasm_x64
 RUN(NAME print_04            LABELS cpython llvm c)
 RUN(NAME print_06            LABELS cpython llvm c)
-RUN(NAME print_05            LABELS cpython llvm wasm wasm_x64)
-RUN(NAME print_float         LABELS cpython llvm wasm wasm_x64)
+RUN(NAME print_05            LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME print_float         LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME print_list_tuple_01    LABELS cpython llvm c)
 RUN(NAME print_list_tuple_02    LABELS cpython llvm c)
 
@@ -259,7 +259,7 @@ RUN(NAME expr_15             LABELS cpython llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME loop_02             LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME loop_03             LABELS cpython llvm c wasm wasm_x64)
-RUN(NAME loop_04             LABELS cpython llvm)
+RUN(NAME loop_04             LABELS cpython llvm c)
 RUN(NAME loop_05             LABELS cpython llvm c)
 RUN(NAME if_01               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
 RUN(NAME if_02               LABELS cpython llvm c wasm wasm_x86 wasm_x64)
