--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -300,17 +300,17 @@ RUN(NAME test_numpy_01       LABELS cpython llvm c)
 RUN(NAME test_numpy_02       LABELS cpython llvm c)
 RUN(NAME test_numpy_03       LABELS cpython llvm c)
 RUN(NAME test_numpy_04       LABELS cpython llvm c)
-RUN(NAME elemental_01        LABELS cpython llvm)
-RUN(NAME elemental_02        LABELS cpython llvm)
-RUN(NAME elemental_03        LABELS cpython llvm)
-RUN(NAME elemental_04        LABELS cpython llvm)
-RUN(NAME elemental_05        LABELS cpython llvm)
-RUN(NAME elemental_06        LABELS cpython llvm)
-RUN(NAME elemental_07        LABELS cpython llvm)
-RUN(NAME elemental_08        LABELS cpython llvm)
-RUN(NAME elemental_09        LABELS cpython llvm)
-RUN(NAME elemental_10        LABELS cpython llvm)
-RUN(NAME elemental_11        LABELS cpython llvm)
+RUN(NAME elemental_01        LABELS cpython llvm c)
+RUN(NAME elemental_02        LABELS cpython llvm c)
+RUN(NAME elemental_03        LABELS cpython llvm c)
+RUN(NAME elemental_04        LABELS cpython llvm c)
+RUN(NAME elemental_05        LABELS cpython llvm c)
+RUN(NAME elemental_06        LABELS cpython llvm c)
+RUN(NAME elemental_07        LABELS cpython llvm c)
+RUN(NAME elemental_08        LABELS cpython llvm c)
+RUN(NAME elemental_09        LABELS cpython llvm c)
+RUN(NAME elemental_10        LABELS cpython llvm c)
+RUN(NAME elemental_11        LABELS cpython llvm c)
 RUN(NAME elemental_12        LABELS cpython llvm c)
 RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm c)
@@ -426,12 +426,12 @@ RUN(NAME func_static_02 LABELS cpython llvm c wasm)
 RUN(NAME func_dep_03    LABELS cpython llvm c)
 RUN(NAME func_dep_04    LABELS cpython llvm c)
 
-RUN(NAME float_01 LABELS cpython llvm wasm wasm_x64)
-RUN(NAME recursive_01 LABELS cpython llvm wasm wasm_x64 wasm_x86)
-RUN(NAME comp_01 LABELS cpython llvm wasm wasm_x64)
-RUN(NAME bit_operations_i32 LABELS cpython llvm wasm wasm_x64)
-RUN(NAME bit_operations_i64 LABELS cpython llvm wasm)
+RUN(NAME float_01 LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME recursive_01 LABELS cpython llvm c wasm wasm_x64 wasm_x86)
+RUN(NAME comp_01 LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME bit_operations_i32 LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME bit_operations_i64 LABELS cpython llvm c wasm)
 
 RUN(NAME test_argv_01      LABELS llvm) # TODO: Test using CPython
-RUN(NAME global_syms_01    LABELS cpython llvm)
-RUN(NAME global_syms_02    LABELS cpython llvm)
+RUN(NAME global_syms_01    LABELS cpython llvm c)
+RUN(NAME global_syms_02    LABELS cpython llvm c)
