--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -436,3 +436,4 @@ RUN(NAME bit_operations_i64 LABELS cpython llvm c wasm)
 RUN(NAME test_argv_01      LABELS llvm) # TODO: Test using CPython
 RUN(NAME global_syms_01    LABELS cpython llvm c)
 RUN(NAME global_syms_02    LABELS cpython llvm c)
+RUN(NAME global_syms_03_b  LABELS cpython llvm c)
