XX Sync from LFortran

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -46,6 +46,7 @@ set(SRC
     pass/unused_functions.cpp
     pass/flip_sign.cpp
     pass/div_to_mul.cpp
+    pass/intrinsic_function.cpp
     pass/fma.cpp
     pass/loop_vectorise.cpp
     pass/sign_from_value.cpp
