--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -210,6 +210,7 @@ RUN(NAME array_02_decl            LABELS cpython llvm c)
 RUN(NAME array_03_decl            LABELS cpython llvm c)
 RUN(NAME variable_decl_01         LABELS cpython llvm c)
 RUN(NAME variable_decl_02         LABELS cpython llvm c)
+RUN(NAME variable_decl_03         LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm c)
 RUN(NAME array_expr_02            LABELS cpython llvm c)
 RUN(NAME array_01            LABELS cpython llvm wasm c)
