Updated reference tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -412,6 +412,10 @@ c = true
 cpp = true
 
 [[test]]
+filename = "../integration_tests/variable_decl_03.py"
+c = true
+
+[[test]]
 filename = "../integration_tests/print_02.py"
 asr = true
 pass = "print_list_tuple"
