Following changes have been made,
1. Improve implied_do_loops pass using replacer APIs

2. Merge class_constructor, implied_do_loops into init_expr for replacing Variable::m_symbolic_value

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SRC
     pass/global_stmts_program.cpp
     pass/global_symbols.cpp
     pass/select_case.cpp
+    pass/init_expr.cpp
     pass/implied_do_loops.cpp
     pass/array_op.cpp
     pass/subroutine_from_function.cpp
