Add pass for_else to convert ForElse to DoLoop

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SRC
 
     pass/nested_vars.cpp
     pass/param_to_const.cpp
+    pass/for_else.cpp
     pass/do_loops.cpp
     pass/for_all.cpp
     pass/global_stmts.cpp
