--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -442,3 +442,4 @@ RUN(NAME global_syms_01    LABELS cpython llvm c)
 RUN(NAME global_syms_02    LABELS cpython llvm c)
 RUN(NAME global_syms_03_b  LABELS cpython llvm c)
 RUN(NAME global_syms_04    LABELS cpython llvm c wasm wasm_x64)
+RUN(NAME global_syms_05    LABELS cpython llvm c)
