--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -444,3 +444,4 @@ RUN(NAME global_syms_03_b  LABELS cpython llvm c)
 RUN(NAME global_syms_03_c  LABELS cpython llvm c)
 RUN(NAME global_syms_04    LABELS cpython llvm c wasm wasm_x64)
 RUN(NAME global_syms_05    LABELS cpython llvm c)
+RUN(NAME global_syms_06    LABELS cpython llvm c)
