Support LCOMPILERS_FAST_ALLOC #ifdef

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,9 @@ set(WITH_WHEREAMI yes
 set(WITH_ZLIB yes
     CACHE BOOL "Compile with ZLIB Library")
 
+set(WITH_LCOMPILERS_FAST_ALLOC yes
+    CACHE BOOL "Compile with fast allocator")
+
 # Build to wasm
 set(LPYTHON_BUILD_TO_WASM no
     CACHE BOOL "Compile LPython To WASM")
@@ -97,6 +100,7 @@ if (LPYTHON_BUILD_TO_WASM)
     set(HAVE_BUILD_TO_WASM yes)
     SET(WITH_WHEREAMI no)
     SET(WITH_ZLIB no)
+    SET(WITH_LCOMPILERS_FAST_ALLOC no)
     add_definitions("-DHAVE_BUILD_TO_WASM=1")
 endif()
 
@@ -110,6 +114,10 @@ if (WITH_ZLIB)
     # Find ZLIB with our custom finder before including LLVM since the finder for LLVM
     # might search for ZLIB again and find the shared libraries instead of the static ones
     find_package(StaticZLIB REQUIRED)
+endif()
+
+if (WITH_LCOMPILERS_FAST_ALLOC)
+    add_definitions("-DLCOMPILERS_FAST_ALLOC=1")
 endif()
 
 # LLVM
