--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -677,6 +677,14 @@ filename = "errors/test_list_concat.py"
 asr = true
 
 [[test]]
+filename = "errors/test_list_count.py"
+asr = true
+
+[[test]]
+filename = "../integration_tests/test_list_count.py"
+asr_json = true
+
+[[test]]
 filename = "errors/test_list1.py"
 asr = true
 
