--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -269,6 +269,7 @@ RUN(NAME test_types_01       LABELS cpython llvm c)
 RUN(NAME test_str_01         LABELS cpython llvm c)
 RUN(NAME test_str_02         LABELS cpython llvm c)
 RUN(NAME test_str_03         LABELS cpython llvm c)
+RUN(NAME test_str_op         LABELS cpython)
 RUN(NAME test_list_01        LABELS cpython llvm c)
 RUN(NAME test_list_02        LABELS cpython llvm c)
 RUN(NAME test_list_03        LABELS cpython llvm c)
@@ -280,6 +281,7 @@ RUN(NAME test_list_08        LABELS cpython llvm c)
 RUN(NAME test_list_09        LABELS cpython llvm c)
 RUN(NAME test_list_10        LABELS cpython llvm c)
 RUN(NAME test_list_section   LABELS cpython llvm c)
+RUN(NAME test_list_op        LABELS cpython)
 RUN(NAME test_tuple_01       LABELS cpython llvm c)
 RUN(NAME test_tuple_02       LABELS cpython llvm c)
 RUN(NAME test_tuple_03       LABELS cpython llvm c)
