--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -149,11 +149,9 @@ jobs:
             git clone https://github.com/emscripten-core/emsdk.git
             cd emsdk
 
-            # Download and install the latest SDK tools.
-            ./emsdk install latest
+            ./emsdk install 3.1.35
 
-            # Make the "latest" SDK "active" for the current user. (writes .emscripten file)
-            ./emsdk activate latest
+            ./emsdk activate 3.1.35
 
       - name: Show Emscripten and Node Info
         shell: bash -l {0}
