CI: Install and use specific node version

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -153,6 +153,10 @@ jobs:
 
             ./emsdk activate 3.1.35
 
+            ./emsdk install node-14.18.2-64bit
+
+            ./emsdk activate node-14.18.2-64bit
+
       - name: Show Emscripten and Node Info
         shell: bash -l {0}
         run: |
