Add ``list.index`` using ``IntrinsicFunction`` API (#1703)
Co-authored-by: Gagandeep Singh <gdp.1807@gmail.com>

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -677,6 +677,10 @@ filename = "errors/test_list_count.py"
 asr = true
 
 [[test]]
+filename = "errors/test_list_index.py"
+run = true
+
+[[test]]
 filename = "errors/test_list1.py"
 asr = true
 
