Catch key not found error

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -814,6 +814,10 @@ filename = "errors/test_dict13.py"
 asr = true
 
 [[test]]
+filename = "errors/test_dict14.py"
+run = true
+
+[[test]]
 filename = "errors/test_zero_division.py"
 asr = true
 
